flux/manifests/03-services/flyte/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flyte-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
