flux/manifests/03-services/flyte/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flyte
  namespace: flyte-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
  hostnames:
    - "flyte.gateway.services.apocrathia.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /login
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /logout
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /callback
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /me
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /config
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: flyteadmin
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flyteconsole
          port: 80
